Update show auras icons only spacing, make sure show auras displays under tem

--- a/src/modules/show-auras/icons.css
+++ b/src/modules/show-auras/icons.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-evenly;
-  padding: 5px;
+  padding: 10px;
   margin: 5px 0;
 }
 
